# dienstplan

./: README.md  app.py  build_exe.py  database.py  launcher.py  old_scheduler.py  pyproject.toml  requirements_build.txt  scheduler.py  test_scheduler.py  utils.py
src/: scheduler.py
tests/: test_database.py
